@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 15.06.23:
+	- better VSync support for OpenGL video output,
 	- OpenSLES audio output (e.g. for Android),
 	- minor slider fixes,
 
